[gd_scene load_steps=16 format=3 uid="uid://cxewjyxiyo7my"]

[ext_resource type="Script" uid="uid://6frvg0obaj15" path="res://Scripts/environment/room_trans_main.gd" id="1_6v614"]
[ext_resource type="Script" uid="uid://bl8s5b64qnb3u" path="res://Scripts/environment/room_trans_sides.gd" id="2_ha7ph"]

[sub_resource type="BoxShape3D" id="BoxShape3D_y8lxq"]
size = Vector3(1, 1, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pwss2"]
transparency = 4
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_buf24"]
material = SubResource("StandardMaterial3D_pwss2")

[sub_resource type="BoxMesh" id="BoxMesh_wb8l8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wb8l8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y8lxq"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_y8lxq"]
material = SubResource("StandardMaterial3D_y8lxq")

[sub_resource type="Gradient" id="Gradient_wb8l8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4q0dg"]
gradient = SubResource("Gradient_wb8l8")

[sub_resource type="Gradient" id="Gradient_4q0dg"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r6ji1"]
gradient = SubResource("Gradient_4q0dg")

[sub_resource type="BoxShape3D" id="BoxShape3D_wb8l8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nkbog"]
size = Vector3(1, 1, 0.87)

[node name="Transition" type="Node3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_6v614")

[node name="Side1Area-nx" type="Area3D" parent="." node_paths=PackedStringArray("area_other", "fade_mesh", "fade_mesh_other", "zone")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.5)
collision_layer = 16
collision_mask = 16
script = ExtResource("2_ha7ph")
area_other = NodePath("../Side2Area-nx")
fade_mesh = NodePath("Side1")
fade_mesh_other = NodePath("../Side2Area-nx/Side2")
zone = NodePath("Detect")

[node name="Detect" type="CollisionShape3D" parent="Side1Area-nx"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.125)
shape = SubResource("BoxShape3D_y8lxq")
debug_color = Color(0.9345488, 0.2567793, 0, 0.41960785)

[node name="Side1" type="MeshInstance3D" parent="Side1Area-nx"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 0.5, 0, 0, 0.25)
layers = 2
transparency = 1.0
cast_shadow = 0
mesh = SubResource("BoxMesh_buf24")

[node name="playerlightBlock" type="MeshInstance3D" parent="Side1Area-nx/Side1"]
visible = false
layers = 32
cast_shadow = 3
mesh = SubResource("BoxMesh_wb8l8")

[node name="Side2Area-nx" type="Area3D" parent="." node_paths=PackedStringArray("area_other", "fade_mesh", "fade_mesh_other", "zone")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)
collision_layer = 16
collision_mask = 16
script = ExtResource("2_ha7ph")
area_other = NodePath("../Side1Area-nx")
fade_mesh = NodePath("Side2")
fade_mesh_other = NodePath("../Side1Area-nx/Side1")
zone = NodePath("Detect")

[node name="Detect" type="CollisionShape3D" parent="Side2Area-nx"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.125)
shape = SubResource("BoxShape3D_y8lxq")
debug_color = Color(0.9345488, 0.2567793, 0, 0.41960785)

[node name="Side2" type="MeshInstance3D" parent="Side2Area-nx"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 0.5, 0, 0, -0.25)
layers = 2
transparency = 1.0
cast_shadow = 0
mesh = SubResource("BoxMesh_buf24")

[node name="playerlightBlock2" type="MeshInstance3D" parent="Side2Area-nx/Side2"]
visible = false
layers = 32
material_override = SubResource("StandardMaterial3D_wb8l8")
cast_shadow = 3
mesh = SubResource("BoxMesh_wb8l8")

[node name="Black-nx" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
layers = 2
cast_shadow = 2
mesh = SubResource("BoxMesh_y8lxq")

[node name="Decal-nx" type="Decal" parent="."]
transform = Transform3D(-1, 0, 1.509958e-07, 0, 1.1, 0, -1.509958e-07, 0, -1, 0, 0.5, 0)
layers = 2
sorting_offset = 6.38
size = Vector3(1, 1, 1)
texture_albedo = SubResource("GradientTexture2D_4q0dg")
texture_emission = SubResource("GradientTexture1D_r6ji1")
upper_fade = 1e-05
lower_fade = 1e-05
cull_mask = 1021

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
input_ray_pickable = false

[node name="block" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_wb8l8")
disabled = true

[node name="softblock" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_nkbog")
disabled = true
debug_color = Color(0.5500001, 1, 0, 1)

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform3D(1.59, 0, 0, 0, 0.675, 0, 0, 0, 1.59, -0.11361122, 0.38210154, -1.1779199)
layers = 524288
billboard = 1
no_depth_test = true
texture_filter = 0
text = "Side 2
"
font_size = 16
outline_size = 4

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1.59, 0, 0, 0, 0.675, 0, 0, 0, 1.59, 0, 0.6185519, 1.0052149)
layers = 524288
billboard = 1
no_depth_test = true
texture_filter = 0
text = "Side 1
"
font_size = 16
outline_size = 4
